增加详情查询动作
